# image_converter

./: .gitignore  CMakeLists.txt  README.md  image_processor.cpp  tests.cpp
fresh-build/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: bmp.h  drop_image_label.h  filter_factory.h  filters.h  heic_codec.h  image.h  image_io.h  image_qt_converter.h  jpeg_codec.h  main_window.h  parser.h  pipeline.h  pipeline_builder.h  png_codec.h  processor.h
src/: bmp.cpp  drop_image_label.cpp  filter_factory.cpp  filters.cpp  gui_main.cpp  heic_codec.cpp  image.cpp  image_io.cpp  image_qt_converter.cpp  jpeg_codec.cpp  main.cpp  main_window.cpp  parser.cpp  pipeline.cpp  pipeline_builder.cpp  png_codec.cpp  processor.cpp
